[gd_scene load_steps=17 format=2]

[ext_resource path="res://map/textures/objects/trees/tree_shadow.png" type="Texture" id=1]
[ext_resource path="res://map/textures/objects/trees/animations/pine_orange-big-shake.png" type="Texture" id=2]
[ext_resource path="res://map/scenes/resources/tree.gd" type="Script" id=3]
[ext_resource path="res://common/Shake.tscn" type="PackedScene" id=4]
[ext_resource path="res://map/textures/objects/trees/animations/tree_common-small-shake.png" type="Texture" id=5]
[ext_resource path="res://characters/textures/vfx/axe-fx.png" type="Texture" id=6]
[ext_resource path="res://characters/stats/stats_manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://map/textures/objects/trees/leaf.png" type="Texture" id=8]
[ext_resource path="res://efx/shader/wind_grass.tres" type="Material" id=9]

[sub_resource type="Curve" id=6]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.946667, 189.818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.17
emission_shape = 2
emission_box_extents = Vector3( 35, 38, 1 )
flag_disable_z = true
gravity = Vector3( 16, 98, 0 )
initial_velocity_random = 0.11
angular_velocity_curve = SubResource( 10 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=9]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 18.0, 36.0, 54.0, 72.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 0.333333 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "shake"
length = 1.8
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9, 0.975, 1.05, 1.125, 1.2, 1.275, 1.35, 1.425, 1.5, 1.575, 1.65, 1.725 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[node name="Tree" type="Node2D"]
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 9 )
position = Vector2( 0, -70 )
texture = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
position = Vector2( -7, 6 )
fixed_fps = 20
process_material = SubResource( 5 )
texture = ExtResource( 8 )

[node name="Shake" parent="Sprite" instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="Sprite"]
position = Vector2( 0, 70 )
collision_layer = 2
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( -8, -2, -32, -40, -33, -75, -29, -92, -14, -106, 13, -105, 25, -94, 30, -76, 30, -38, 12, -2 )

[node name="VFX_Hit" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -24 )
scale = Vector2( 1.35, 1.35 )
texture = ExtResource( 6 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX_Hit"]
anims/hit = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/die = SubResource( 3 )
anims/shake = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationStopper" type="Timer" parent="."]

[node name="StatsManager" parent="." instance=ExtResource( 7 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
attenuation = 13.4542

[node name="Timers" type="Node" parent="."]

[node name="SoundTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="WindReactTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="AnimationStopper" to="." method="_on_AnimationStopper_timeout"]
